[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrogram"
version = "1.2.0"
description = "Spectrogram Viewer and Audio Processing Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib",
    "librosa",
    "numpy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
