[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrogram"
version = "1.3.0"
description = "Spectrogram Viewer and Audio Processing Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel",
    "librosa",
    "matplotlib",
    "nbformat",
    "notebook",
    "numpy",
    "openpyxl",
    "pandas",
    "soundfile"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
