[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrogram"
version = "1.7.0"
description = "Bat Call Noise Reduction and Analysis Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel",
    "librosa",
    "matplotlib",
    "nbformat",
    "notebook",
    "numpy",
    "openpyxl",
    "pandas",
    "soundfile"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
